// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Live tail button change live tail to 10s interval 1`] = `
<button
  className="euiButton euiButton--primary"
  data-test-subj=""
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "minWidth": undefined,
    }
  }
  type="button"
>
  <span
    className="euiButtonContent euiButton__content"
  >
    <svg
      aria-hidden={true}
      className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
      focusable="false"
      height={16}
      role="img"
      style={null}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Zm0 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H4Z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="euiButton__text"
    >
      10s
    </span>
  </span>
</button>
`;

exports[`Live tail button starts live tail with 5s interval 1`] = `
<button
  className="euiButton euiButton--primary"
  data-test-subj=""
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "minWidth": undefined,
    }
  }
  type="button"
>
  <span
    className="euiButtonContent euiButton__content"
  >
    <svg
      aria-hidden={true}
      className="euiIcon euiIcon--medium euiIcon--inherit euiIcon-isLoading euiButtonContent__icon"
      focusable="false"
      height={16}
      role="img"
      style={null}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    />
    <span
      className="euiButton__text"
    >
      5s
    </span>
  </span>
</button>
`;

exports[`Live tail off button stop live tail 1`] = `
<button
  className="euiButton euiButton--danger"
  data-test-subj=""
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "minWidth": undefined,
    }
  }
  type="button"
>
  <span
    className="euiButtonContent euiButton__content"
  >
    <svg
      aria-hidden={true}
      className="euiIcon euiIcon--medium euiIcon--inherit euiButtonContent__icon"
      focusable="false"
      height={16}
      role="img"
      style={null}
      viewBox="0 0 16 16"
      width={16}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M4 2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2Zm0 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H4Z"
        fillRule="evenodd"
      />
    </svg>
    <span
      className="euiButton__text"
    >
      Stop
    </span>
  </span>
</button>
`;
